device methods added
